<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <!-- Título -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/title_rating"
        android:textColor="@color/primary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- GENERAL -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gen_rating"
        android:textColor="@color/onSurface"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvGeneral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="0"
        android:textColor="@color/onSurface"
        android:textSize="34sp"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/seekGeneral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundTint="@color/primaryC"
        android:max="100"
        android:progressTint="@color/primaryC"
        android:thumbTint="@color/primaryC" />

    <!-- DESPLEGAR -->
    <LinearLayout
        android:id="@+id/layoutExpandir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/advanced_ratings_collapse"
            android:textColor="@color/onSurface"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgExpand"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_expand"
            app:tint="@color/primary" />
    </LinearLayout>

    <!-- DETALLES -->
    <LinearLayout
        android:id="@+id/layoutDetalles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <!-- Dirección -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/direction_rating"
            android:textColor="@color/onSurface" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <SeekBar
                android:id="@+id/seekDireccion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:foregroundTint="@color/primaryC"
                android:max="100"
                android:progressTint="@color/primaryC"
                android:thumbTint="@color/primaryC" />

            <TextView
                android:id="@+id/tvDireccion"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="0"
                android:textColor="@color/onSurface" />
        </LinearLayout>

        <!-- Guión -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/script_rating"
            android:textColor="@color/onSurface" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <SeekBar
                android:id="@+id/seekGuion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:foregroundTint="@color/primaryC"
                android:max="100"
                android:progressTint="@color/primaryC"
                android:thumbTint="@color/primaryC" />

            <TextView
                android:id="@+id/tvGuion"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="0"
                android:textColor="@color/onSurface" />
        </LinearLayout>

        <!-- Actores -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/actors_rating"
            android:textColor="@color/onSurface" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <SeekBar
                android:id="@+id/seekActores"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:foregroundTint="@color/primaryC"
                android:max="100"
                android:progressTint="@color/primaryC"
                android:thumbTint="@color/primaryC" />

            <TextView
                android:id="@+id/tvActores"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="0"
                android:textColor="@color/onSurface" />
        </LinearLayout>

    </LinearLayout>

    <!-- Guardar -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGuardarValoracion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/save_rating"/>

</LinearLayout>